--- a/RazorTemplates/Views/MessageView.cshtml
+++ b/RazorTemplates/Views/MessageView.cshtml
@@ -1,35 +1,65 @@
-﻿@model RazorTemplates.Models.ChatMessagesModel
+﻿@using System.Text
+@using System.Text.Json
+@model RazorTemplates.Models.ChatMessagesModel
 
-<html>
-<head>
-</head>
-<body>
-    @{
-        /*
-         * This is a bit of a mess, needs a decent way of grouping to make a page like the web whatsapp
-         */
-        var grouped = Model.ChatMessagesAndContacts.GroupBy(c => c.ChatMessage.ChatId);
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Whats App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  </head>
 
-        foreach (var group in grouped)
-        {
-            int chatId = group.Key;
+    <body>
+        <div class='container'>
+            <div class=row>
+                @{
+                    /*
+                     * This is a bit of a mess, needs a decent way of grouping to make a page like the web whatsapp
+                    */
+                    var grouped = Model.ChatMessagesAndContacts.GroupBy(c => c.ChatMessage.ChatId);
 
-            if (!group.Any())
-            {
-                continue;
-            }
+                    StringBuilder groupBuilder = new();
+                    StringBuilder messageBuilder = new();
 
-            var displayName = group.Where(g => !string.IsNullOrWhiteSpace(g.Contact?.DisplayName))
-                .Select(c => c.Contact?.DisplayName).FirstOrDefault();
+                    groupBuilder.AppendLine("<div class='col-md-3'>");
 
-            <div>----- From: @displayName -----</div>
+                    foreach (var group in grouped)
+                    {
+                        int chatId = group.Key;
 
-            foreach(var item in group)
-            {
-                <div>@item.ChatMessage?.MessageFrom - @item.ChatMessage?.MessageText</div>                
-            }
-            <div>--------------------------------------------------</div>
-        }
-    }
-</body>
+                        if (!group.Any())
+                        {
+                            continue;
+                        }
+
+                        string displayName = group.Where(g => !string.IsNullOrWhiteSpace(g.Contact?.DisplayName))
+                            .Select(c => c.Contact?.DisplayName).FirstOrDefault();
+
+                        // TODO add a chat id to the group so we can unhide the messages
+                        groupBuilder.AppendLine($"<ul>{displayName ?? "Unknown contact"}</ul>");
+
+                        var counter = 0;
+
+                        foreach(var item in group)
+                        {
+                            if (counter < 10)
+                            {
+                                messageBuilder.AppendLine($"<div id=message_chat_id{item.ChatMessage?.ChatId} hidden>{item.ChatMessage?.MessageFrom} -{@item.ChatMessage?.MessageText}</div>");
+                            }
+                            counter++;
+                        }
+                    }
+
+                    groupBuilder.AppendLine("</div>");
+                    @Html.Raw(groupBuilder);
+
+                    <div class='col-md-9'>
+                        @Html.Raw(messageBuilder)
+                    </div>
+                }
+            </div>
+        </div>
+    </body>
 </html>
