--- a/RazorTemplates/Views/MessagesView.cshtml
+++ b/RazorTemplates/Views/MessagesView.cshtml
@@ -7,54 +7,87 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <style>
+        .chat-title {
+            font-size: larger;
+            align-content: center;
+        }
+
+        .quoted-message {
+            font-size: smaller;
+            color: grey;
+        }
+
+        .message-time {
+            font-size: x-small;
+            text-align: right;
+        }
+    </style>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Whats App - @Model.DisplayName</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
-
     <body>
-        <div class='container'>
-            <div class='row'>
+        <div class="container">
+            <div class="row">
             @{
-                IEnumerable<ChatMessageDto> chatMessages = Model.ChatMessages;
+                bool MessageTypeHasThumbNail(MessageType? messageType)
+                {
+                    return
+                        messageType == MessageType.Image ||
+                        messageType == MessageType.Video ||
+                        messageType == MessageType.Gif ||
+                        messageType == MessageType.Document;
+                }
+
+                IEnumerable<IGrouping<DateTime, ChatMessageDto>> messagesGroupByDate = Model.ChatMessages.GroupBy(cm => cm.MessageRecievedTime.Date);
                 StringBuilder groupBuilder = new();
 
                 groupBuilder.AppendLine("<div class=''>");
 
-                foreach (ChatMessageDto chat in chatMessages)
+                foreach (var messageGroupByDate in messagesGroupByDate)
                 {
-                    MessageType? messageType = chat.MessageType;
+                    DateTime groupDate = messageGroupByDate.Key.Date;
+                    groupBuilder.AppendLine($"<div class=''>{groupDate.Date.ToLongDateString()}.</div>");
 
-                    string offsetClass = chat.MessageFromMe ? "offset-md-3" : string.Empty;
-
-                    groupBuilder.AppendLine($"<div class='message col-md-6 {offsetClass}'>");
-
-                    if (messageType == MessageType.Text)
+                    foreach (ChatMessageDto chat in messageGroupByDate)
                     {
-                        groupBuilder.AppendLine($"<div class=''>{chat.MessageText}</div>");
-                    }
-                    else if ((
-                        messageType == MessageType.Image || 
-                        messageType == MessageType.Video || 
-                        messageType == MessageType.Gif || 
-                        messageType == MessageType.Document) &&
-                        !string.IsNullOrWhiteSpace(chat.Thumbnail))
-                    {
-                        groupBuilder.AppendLine($"<img alt='{chat.MessageText}' src='data:image/jpeg;base64,{chat.Thumbnail}' /><div>{chat.MessageText}</div>");
-                    }
-                    else if (messageType == MessageType.Contact)
-                    {
-                        groupBuilder.AppendLine($"<div>Contact: {chat.MessageText}</div>");
-                    }
+                        MessageType? messageType = chat.MessageType;
+                        string offsetClass = chat.MessageFromMe ? "offset-md-3" : string.Empty;
 
-                    groupBuilder.AppendLine("</div>");
+                        groupBuilder.AppendLine($"<div class='message col-md-5 border rounded {offsetClass}'>");
+
+                        if (!string.IsNullOrWhiteSpace(chat.QuotedText)) {
+                            groupBuilder.AppendLine($"<div class='quoted-message'>\"{chat.QuotedText}\"</div>");
+                        }
+
+                        if (messageType == MessageType.Text)
+                        {
+                            groupBuilder.AppendLine($"<div class=''>{chat.MessageText}</div>");
+                        }
+                        else if (MessageTypeHasThumbNail(messageType) && !string.IsNullOrWhiteSpace(chat.Thumbnail))
+                        {
+                            groupBuilder.AppendLine($"<img alt='{chat.MessageText}' src='data:image/jpeg;base64,{chat.Thumbnail}' /><div>{chat.MessageText}</div>");
+                        }
+                        else if (messageType == MessageType.Contact)
+                        {
+                            groupBuilder.AppendLine($"<div>Contact: {chat.MessageText}</div>");
+                        }
+
+                        groupBuilder.AppendLine($"<div class='message-time'>{chat.MessageRecievedTime.ToShortTimeString()}</div>");
+
+                        groupBuilder.AppendLine("</div>");
+                    }
                 }
 
                 groupBuilder.AppendLine("</div>");
-                <div>@Model.DisplayName </div>
 
-                @Html.Raw(groupBuilder);
+                // Write the html
+                    <div class="chat-title">@Model.DisplayName </div>
+
+                    @Html.Raw(groupBuilder);
             }
             </div>
         </div>
