--- a/RazorTemplates/Views/MessagesView.cshtml
+++ b/RazorTemplates/Views/MessagesView.cshtml
@@ -24,10 +24,16 @@
         }
     </style>
 
+    <style>
+        @{
+            await Html.RenderPartialAsync("CSS/bootstrap.min.css.cshtml");
+        }
+    </style>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Whats App - @Model.DisplayName</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    
   </head>
     <body>
         <div class="container">
@@ -85,9 +91,9 @@
                 groupBuilder.AppendLine("</div>");
 
                 // Write the html
-                    <div class="chat-title">@Model.DisplayName </div>
+                <div class="chat-title">@Model.DisplayName </div>
 
-                    @Html.Raw(groupBuilder);
+                @Html.Raw(groupBuilder);
             }
             </div>
         </div>
